# fhir4ds3

./: "compliance_report_collection_test.json"  .dockerignore  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  README.md  SP-106-TEST-COVERAGE-SUMMARY.md  SP-107-003-BOOLEAN-LOGIC-FIX-SUMMARY.md  SP-109-005-completion-summary.md  build.sh  build_wheel.py  compliance_report.json  compliance_report_after_sp105_fixes.json  compliance_report_current.json  compliance_report_duckdb.json  compliance_report_fhirpath_official.json  compliance_report_final.json  compliance_report_full.json  compliance_report_sp105_final.json  compliance_report_sp106_final.json  compliance_report_sp106_full.json  compliance_report_sp107_official.json  compliance_report_sp108_partial.json  comprehensive_translation_coverage.json  docker-compose.yml  docker-start.sh  healthcare_use_cases_translation_report.json  pyproject.toml  run_baseline_compliance.py  run_compliance_tests.py  scheduler.py  translation_report_all_expressions.json
.claude/: settings.json
.claude/commands/: README.md  approve-pep.md  architecture-deep-dive.md  autopilot-sprint.md  code-quality-audit.md  complete-sprint.md  complete-task.md  create-pep.md  create-sprint.md  review-task.md  run-full-test-suite.md
.omc/: continuation-count.json  ultrapilot-state.json
.omc/state/: FINAL-REPORT.md  SP-103-progress.json  SP-104-FINAL-SUMMARY.md  SP-104-SUMMARY.md  SP-104-tasks.json  autopilot-sprint-SP-109.json  autopilot-sprint.json  skill-sessions.json  subagent-tracking.json  ultrapilot-ownership-sp107.json  ultrapilot-ownership-sp108.json  ultrapilot-state-sp108.json  ultrapilot-state.json
.omc/ultrapilot/: decomposition-sp107.json  decomposition-sp108.json
docs/: fhirpath-parser-integration.md  getting-started.md
docs/api/: README.md  translator-api-reference.md  translator-integration-guide.md  translator-troubleshooting.md  translator-usage-examples.md
docs/examples/: README.md  clinical-scenarios.md
docs/guides/: README.md  advanced-usage.md  error-handling.md  getting-started.md  integration.md  type-system.md
docs/performance/: README.md  optimization.md
fhir4ds/: cql  dialects  fhirpath  pipeline  sql
fhir4ds/main/: __init__.py
project-docs/: README.md  WORK-SESSION-SUMMARY-2025-12-05-EVENING.md
project-docs/analysis/: fhir-type-hierarchy-review.md  testinheritance-root-cause-analysis.md  testliterals-root-cause-analysis.md
project-docs/architecture/: ADR-SP-018-001-remove-python-evaluator.md  ARCHITECTURAL-INVESTIGATION-2025-12-05.md  ARRAY-METADATA-ISSUE-FOUND-2025-12-05.md  BUG-FIX-RESULTS-2025-12-05.md  CORRECTION-SP-021-015-INVALID.md  CTE-RESOURCE-COLUMN-FIX-2025-12-05.md  EXECUTION-PATH-BUGS-FOUND.md  FIXTURE-UPDATE-RESULTS.md  INVESTIGATION-SUMMARY-2025-12-05.md  README.md  REMAINING-ISSUES-2025-12-05.md  cte-infrastructure.md  fhirpath-evaluation-architecture.md  fhirpath-execution-pipeline.md  goals.md  highboundary-implementation-guide.md  performance-characteristics.md  sprint-006-architectural-validation.md  translator-architecture.md  unified-sql-generator-design.md
project-docs/benchmarks/: performance-baseline.md  postgresql-performance-report.md
project-docs/compliance/: sprint-011-results.md
project-docs/guides/: README.md  cte-integration-guide.md  extension-guide.md  troubleshooting-guide.md
project-docs/investigations/: sprint-008-comparison-operators-analysis.md  sprint-008-testbasics-analysis.md  sprint-008-testobservations-analysis.md
project-docs/known-issues/: fhirpath-translator-where-function-bug.md
project-docs/peps/: PEP-003-vs-PEP-004-clarification.md  README.md
project-docs/plans/: INFRASTRUCTURE-ASSESSMENT.md  README.md
project-docs/process/: README.md  architecture-overview.md  coding-standards.md  git-workflow.md  pep-completion-summary-template.md  pep-process.md  pep-template.md  roles-and-responsibilities.md
project-docs/tasks/: SP-103-001.md  SP-103-002.md  SP-103-003.md  SP-103-004.md  SP-103-005.md  SP-103-006.md  SP-103-007.md  SP-103-008.md  SP-103-009.md  SP-103-010.md  SP-103-011.md  SP-103-012.md  SP-103-013.md  SP-103-014.md  SP-103-015.md  SP-103-016.md  SP-103-017.md
project-docs/test-results/: CURRENT-COMPLIANCE-BASELINE.md  SPRINT-016-FINAL-COMPLIANCE-REPORT.md  SPRINT-018-COMPLIANCE-REPORT.md  compliance-feature-SP-016-002-2025-11-06-duckdb.json  compliance-main-2025-11-06-duckdb.json  sprint-008-failure-analysis.md  sprint-008-healthcare-coverage.md  sprint-008-multi-db-consistency.md  sprint-008-official-compliance.md  sprint-008-performance-benchmarks.md
project-docs/tutorials/: README.md  fhirpath-execution.md  path-navigation-examples.md
tests/: conftest.py
tests/benchmarks/: __init__.py
tests/integration/: README.md  test_cross_database_dialect_compatibility.py  test_end_to_end.py  test_fhir_type_database_compatibility.py  test_multi_database.py  test_parser_generator_integration.py  test_parser_translator_compatibility.py  test_sql_execution_validation.py
tests/investigation/: test_type_function_official_pattern.py
tests/performance/: __init__.py  test_sprint_008_comprehensive_benchmarks.py
tests/regression/: __init__.py  (+1 more)
work/: categorize_failures.py
(+1002 files in other folders)
